# my-fund

./: .gitignore  AGENTS.md  LICENSE  PUBLISHING.md  README.md  SECURITY.md
.agents/skills/: my-fund
.github/workflows/: ci.yml
mcp/: .env.example  AGENTS.md  README.md  pyproject.toml  server.json
mcp-servers/: AGENTS.md  README.md
mcp-servers/src/my-fund/: README.md
mcp-servers/src/my-fund-app/: README.md  pyproject.toml  server.json
mcp-servers/src/my-fund-app/examples/: mock_dividend_payments_2026.json
mcp-servers/src/my-fund-app/src/my_fund_app_mcp/: __init__.py  api.py  server.py
mcp-servers/src/my-fund-app/src/my_fund_app_mcp/widgets/: dividend_calendar.html  portfolio_dashboard.html
mcp-servers/src/my-fund-app/tests/: test_api.py  test_server.py
mcp-servers/src/my-fund/src/my_fund_mcp/: api.py
mcp/src/my_fund_mcp/: __init__.py  api.py  server.py
mcp/tests/: test_api.py  test_server.py
resources/api/: APIdoc.yaml
scripts/: validate_release.py
skills/: AGENTS.md
skills/my-fund/: .env.example  .gitignore  AGENTS.md  SKILL.md
skills/my-fund/agents/: openai.yaml
skills/my-fund/references/: analysis-rules.md  api-reference.md  observed-response.md  question-catalog.md
skills/my-fund/scripts/: fetch_portfolio.py  inspect_portfolio_response.py  myfund_api.py
