[project]
name = "my-fund-mcp"
version = "0.1.0"
description = "MCP server for read-only myFund.pl portfolio analysis."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
]

[project.scripts]
my-fund-mcp = "my_fund_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/my_fund_mcp"]
